--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1779,5 +1779,108 @@ stories:
   state: Mississippi
   domain: http://www.starkvilledailynews.com/
   link: https://www.starkvilledailynews.com/news/expert-offers-advice-for-beating-the-holiday-blues/article_496b0dfa-27e9-11ea-b60a-d7352e4ccb77.html
+images:
+- name: power-lines-power-lines-empty-space-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-plentiful.jpg
+- name: aws-s3-stories-window-mountain-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-window-mountain-dark-dali.jpg
+- name: abandonedbuildings_blue_granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_granite.jpg
+- name: braceros-domingo-ulloa-statue-of-liberty_35910144944_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-statue-of-liberty_35910144944_o.jpg
+- name: docks-docks-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-graham-sutherland.jpg
+- name: oldcabin-store-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
+- name: rockingchair-rockingchair-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colored-circuits.jpg
+- name: hollywood-building-hollywood-building-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crafty-painting.jpg
+- name: wreck-DSC_0267.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-DSC_0267.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-granite.jpg
+- name: status-berlin-status-berlin-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
+- name: server-cloud-server-racks-door-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-smoking-cigarette.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
+- name: aws-s3-stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
+- name: stories-4882162452-fa3126b38d-b-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
+- name: copper-circuit-DSC_0001.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0001.jpg
+- name: bf-skinner-grain-ship-docking-grass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-grain-ship-docking-grass.jpg
+- name: subway-subway-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-bright-sand.jpg
+- name: castle-wall-DSC-0067-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-neo-instinct.JPG
+- name: rockingchair-face-2-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crafty-painting.jpg
+- name: bf-skinner-dinosaur-stepping-on-lego.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dinosaur-stepping-on-lego.jpg
+- name: aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+- name: castle-wall-DSC-0067-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-matrix.JPG
+- name: amusement-park-amusement-park-2-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-alberto-giacometti.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
+- name: nyc-flag-nycflag-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-circuit.jpg
+- name: beach-rocks-beach-rocks-currents-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-china-prop.jpg
+- name: stalin-time-old-gas-station_35891228584_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-gas-station_35891228584_o.jpg
+- name: sand-hand-sand-hand-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
+- name: powerlines-power-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-ww2-color.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
+- name: stalin-time-through-berlin-wall.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-through-berlin-wall.jpg
+- name: oldsmallboat-oldsmallboat-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-hot-spicy.jpg
+- name: amusement-park-amusement-park-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sunday.jpg
+- name: crow_mucha_mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
+- name: capital-battle-capitolbattle-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-clean-view.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
+- name: christianity-christianity-under-construction-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dry-skin.jpg
+- name: crow_rainbow_festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_rainbow_festival.jpg
+- name: la-muse-lighthouse_36679514616_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lighthouse_36679514616_o.jpg
+- name: stalin-time-steam-engine-iceland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-steam-engine-iceland.jpg
+- name: store-on-corner-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-smooth-ride.jpg
+- name: downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
+- name: stalin-time-looking-down-over-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-looking-down-over-city.jpg
+- name: walled-garden-walled-garden-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-really-hot.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit.jpg
+- name: fence-fence-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-cinnamon-rolls.jpg
+- name: blossombar-deep-connections-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-50-62.jpg
+- name: beach-rocks-beach-rocks-currents-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sunday.jpg
+- name: trucksilo-trucksilo-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-nazi-poster.jpg
+- name: abandonedbuildings_aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_aqua.jpg
 ---
 New Defense Grants May Benefit Enid Infrastructure.&nbsp;Powerful Storm Pounds Southern California With Rain, Snow.&nbsp;Sheriff Needs Your Help.&nbsp;Missouri Football Hires Former Kansas Football Coach.&nbsp;Israel's Embattled Netanyahu Declares Victory In Primary.&nbsp;Children Give Back To The Community.&nbsp;Japan Revises Fukushima Cleanup Plan, Delays Key Steps.&nbsp;Goff Seeks To End Rams' Disappointing Season On A High Note.&nbsp;
