--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1780,107 +1780,107 @@ stories:
   domain: http://www.starkvilledailynews.com/
   link: https://www.starkvilledailynews.com/news/expert-offers-advice-for-beating-the-holiday-blues/article_496b0dfa-27e9-11ea-b60a-d7352e4ccb77.html
 images:
-- name: power-lines-power-lines-empty-space-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-plentiful.jpg
-- name: aws-s3-stories-window-mountain-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-window-mountain-dark-dali.jpg
-- name: abandonedbuildings_blue_granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_granite.jpg
-- name: braceros-domingo-ulloa-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-statue-of-liberty_35910144944_o.jpg
-- name: docks-docks-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-graham-sutherland.jpg
-- name: oldcabin-store-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
-- name: rockingchair-rockingchair-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colored-circuits.jpg
-- name: hollywood-building-hollywood-building-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crafty-painting.jpg
-- name: wreck-DSC_0267.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-DSC_0267.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-granite.jpg
-- name: status-berlin-status-berlin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
-- name: server-cloud-server-racks-door-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-smoking-cigarette.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
-- name: aws-s3-stories-fence-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
-- name: stories-4882162452-fa3126b38d-b-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
-- name: copper-circuit-DSC_0001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0001.jpg
-- name: bf-skinner-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-grain-ship-docking-grass.jpg
-- name: subway-subway-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-bright-sand.jpg
-- name: castle-wall-DSC-0067-neo-instinct.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-neo-instinct.JPG
-- name: rockingchair-face-2-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crafty-painting.jpg
-- name: bf-skinner-dinosaur-stepping-on-lego.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dinosaur-stepping-on-lego.jpg
-- name: aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-- name: castle-wall-DSC-0067-matrix.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-matrix.JPG
-- name: amusement-park-amusement-park-2-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-alberto-giacometti.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
-- name: nyc-flag-nycflag-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-circuit.jpg
-- name: beach-rocks-beach-rocks-currents-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-china-prop.jpg
-- name: stalin-time-old-gas-station_35891228584_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-gas-station_35891228584_o.jpg
-- name: sand-hand-sand-hand-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
-- name: powerlines-power-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-ww2-color.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
-- name: stalin-time-through-berlin-wall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-through-berlin-wall.jpg
-- name: oldsmallboat-oldsmallboat-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-hot-spicy.jpg
-- name: amusement-park-amusement-park-2-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sunday.jpg
-- name: crow_mucha_mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
-- name: capital-battle-capitolbattle-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-clean-view.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
-- name: christianity-christianity-under-construction-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dry-skin.jpg
-- name: crow_rainbow_festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_rainbow_festival.jpg
-- name: la-muse-lighthouse_36679514616_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lighthouse_36679514616_o.jpg
-- name: stalin-time-steam-engine-iceland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-steam-engine-iceland.jpg
-- name: store-on-corner-oldcabin-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-smooth-ride.jpg
-- name: downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
-- name: stalin-time-looking-down-over-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-looking-down-over-city.jpg
-- name: walled-garden-walled-garden-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-really-hot.jpg
-- name: old-door-lock-old-door-lock-2-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit.jpg
-- name: fence-fence-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-cinnamon-rolls.jpg
-- name: blossombar-deep-connections-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-50-62.jpg
-- name: beach-rocks-beach-rocks-currents-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sunday.jpg
-- name: trucksilo-trucksilo-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-nazi-poster.jpg
-- name: abandonedbuildings_aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_aqua.jpg
+- name: ellis-island-ellisisland-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-nazi-poster.jpg
+- name: fence-mexico-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-brush.jpg
+- name: store-on-corner-store-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-bright-sand.jpg
+- name: old-granary-field-oldhouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gred-mash.jpg
+- name: sand-hand-sand-hand-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-yellow-paper.jpg
+- name: victoria-victoria-corner-hotel-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-alberto-giacometti.jpg
+- name: bf-skinner-supreme-court-columns.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-supreme-court-columns.jpg
+- name: nyc-flag-nycflag-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-really-hot.jpg
+- name: yosemite-yosemite-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-gan-vogh.jpg
+- name: aws-s3-deserthills-deserthills-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still-1200.jpg
+- name: mediterranean-mediterranean-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-pond.jpg
+- name: mosaic-face-mosaic-face-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-deep-connections.jpg
+- name: udnie-IMG_3469.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_3469.jpg
+- name: school-clouds-church-clouds-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-alberto-giacometti.jpg
+- name: nyc-flag-nycflag-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-diego-rivera1.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-pond.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
+- name: udnie-IMG_8471.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8471.jpg
+- name: nazi-invasion-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-container-several-colors-grey.jpg
+- name: downtheline-downtheline-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smoking-cigarette.jpg
+- name: mosaic-face-mosaic-face-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
+- name: white-house-lawn-white-house-lawn-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alien-goggles.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+- name: old-house-oldhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-neo-instinct.jpg
+- name: aws-s3-stories-carryload-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-smoking-cigarette.jpg
+- name: aws-s3-stories-machine-road-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-machine-road-copper-circuit.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
+- name: copper-circuit-lincoln-memorial_36690528196_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-lincoln-memorial_36690528196_o.jpg
+- name: store-on-corner-oldcabin-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-marcel-duchamp.jpg
+- name: oldsmallboat-oldsmallboat-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-plentiful.jpg
+- name: bf-skinner-thinking-man-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-thinking-man-statue.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-electricity.jpg
+- name: gypsymosaic-gypsy-eyes-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-creativity.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-clean-view.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dali-three.jpg
+- name: oldcabin-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-satan-red.jpg
+- name: downtown-trucksilo-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-gan-vogh.jpg
+- name: beach-clouds-lifeguard-beachclouds-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-rainbow-festival.jpg
+- name: windowmountain-window-mountain-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crafty-painting.jpg
+- name: beach-rocks-beach-rocks-currents-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-post-modern.jpg
+- name: trucksilo-trucksilo-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-gan-vogh.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-plentiful.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-plentiful.png
+- name: beach-clouds-lifeguard-beachclouds-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-missle.jpg
+- name: old-church-oldchurch-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-rain.jpg
+- name: power-lines-power-lines-empty-space-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-paper.jpg
+- name: rockingchair-rockingchair-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-brush.jpg
+- name: christianity-christianity-under-construction-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colorful-blocks.jpg
+- name: oldhousecars-house-old-cars-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-rainbow-festival.jpg
+- name: razorcliff-razorcliff-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colored-circuits.jpg
+- name: catacombs-catacombs-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-really-hot.jpg
 ---
 New Defense Grants May Benefit Enid Infrastructure.&nbsp;Powerful Storm Pounds Southern California With Rain, Snow.&nbsp;Sheriff Needs Your Help.&nbsp;Missouri Football Hires Former Kansas Football Coach.&nbsp;Israel's Embattled Netanyahu Declares Victory In Primary.&nbsp;Children Give Back To The Community.&nbsp;Japan Revises Fukushima Cleanup Plan, Delays Key Steps.&nbsp;Goff Seeks To End Rams' Disappointing Season On A High Note.&nbsp;
